# BlndPrntCopy

./: .gitignore  README.md
.github/workflows/: main.yml
app/: CMakeLists.txt  main.cpp
app/assets/ASCII/: blind.txt
app/assets/ASCII/NPC/Enemy/: fish.txt  microFish.txt
app/assets/gameResources/mobs/: cat.json  cat.txt  frog.json  frog.txt
app/assets/gameResources/scenes/: battle_scene.json
app/assets/texts/: test.txt  test_book1.txt  test_book2.txt  test_ru.txt
app/forms/: attack_widgets.txt  base.txt  death.txt  defending_widget.txt  enemy_widget.txt  fighting_menu_widgets.txt  homebase.txt  inventory.txt  menu.txt  start.txt  text_attack.txt
app/forms/junk/: fighting_form.txt  form.txt  form1.txt  form2.txt  menu.txt  menu2.txt
app/forms/standard/fighting/: BaseForMob.txt  BasicLayout.txt  MobBase.txt
app/src/: Game.h  GameContext.h  Scenes.h
app/src/scenes/: DummyScene.h  MainManager.h  Scene.h  SceneType.h
app/src/scenes/ingame/: DeathScene.cpp  DeathScene.h  HomebaseScene.cpp  HomebaseScene.h  InGameManager.h  inGameManager.cpp
app/src/scenes/ingame/inrun/: BookMenu.h  CrossroadScene.cpp  CrossroadScene.h  InRunManager.h  InventoryMenu.h  SceneGenerator.h  VictoryScene.cpp  VictoryScene.h  inRunManager.cpp
app/src/scenes/ingame/inrun/action/fight/: InFightManager.h  ItemReactionConfigurable.h  inFightManager.cpp
app/src/scenes/ingame/inrun/action/fight/scenes/: AtkScene.cpp  AtkScene.h  BattleMenuScene.cpp  BattleMenuScene.h  DefendMenu.h  DefendScene.cpp  DefendScene.h
app/src/scenes/ingame/inrun/action/fight/tools/: HitsTime.h  RunningLineDisplay.h
app/src/scenes/ingame/inrun/base/: FillableDisplayer.h  InRunPanel.h  InventoryButtonUtil.h  Layout.h  MobView.h  PlayerParametersFront.h  RunInfoFront.h  SceneInstructionSelectable.h  SceneInstructions.cpp  SceneInstructions.h  SelectableTemplate.h
app/src/scenes/ingame/inrun/base/alternatives/: LayoutUtils.h
app/src/scenes/main_game_screen/: MenuScene.cpp  MenuScene.h
app/src/text_processing/backEnd/: TextProcessor.h
app/src/text_processing/backEnd/tools/: TextHolder.h  TextSource.h
app/src/utils/: AssetPaths.h  ErrorHandler.h  Messages.h  QueuedMessageBus.h  SmartSubscriber.h  SmartTimer.h  SoundGetter.h  StringUtils.h  Utils.h  WidgetConfigurator.h
app/src/utils/PubBus/: Message.hpp  MessageBus.hpp  MessageContainer.hpp  MessageContainerBase.hpp  PubBus.hpp  SubscriberHandle.hpp
app/src/world_player_and_container/: Book.h  BoundedValue.h  Item.h  ItemManager.h  Mob.cpp  Mob.h  Player.h  WorldPlayerAndContainer.h
app/tests/: test_ItemManager.cpp  test_SceneManager.cpp
